# mosamaticinsights

./: README.md
mosamatic-insights/: pyproject.toml
mosamatic-insights/scripts/: buildapp.sh  buildexe.bat
mosamatic-insights/src/experiments/vtk/cone/: main.py
mosamatic-insights/src/mosamaticinsights/: app.py  main.py  mainwindow.py
mosamaticinsights/: pyproject.toml
mosamaticinsights/archived/mosamaticinsights-20260121/process/: process.py
mosamaticinsights/archived/mosamaticinsights-20260121/resources/: build.bat
mosamaticinsights/archived/mosamaticinsights-20260121/resources/icons/: mosamaticinsights.icns
mosamaticinsights/archived/mosamaticinsights-20260217/: main.py
mosamaticinsights/archived/mosamaticinsights-20260217/core/: logmanager.py
mosamaticinsights/archived/mosamaticinsights-20260217/core/data/: dicomfile.py
mosamaticinsights/archived/mosamaticinsights-20260217/ui/widgets/: colorpicker.py  matplotlibcanvas.py
mosamaticinsights/scripts/: activate.bat  activate.sh  buildexe.bat  install-dependencies.bat  install-dependencies.sh  install-deps.sh  installdeps.bat  installdeps.sh  setup-environment.bat  setupenv.bat  setupenv.sh  test.sh  updatepackages.bat
mosamaticinsights/scripts/installation/: MosamaticInsights-installer.bat  MosamaticInsights.bat
mosamaticinsights/src/: models.py
mosamaticinsights/src/mosamaticinsights/: cli.py  main.py  mainwindow.py
mosamaticinsights/src/mosamaticinsights/core/commands/: rescaledicomimages.py
mosamaticinsights/src/mosamaticinsights/core/common/: logmanager.py
mosamaticinsights/src/mosamaticinsights/core/data/: dicomfile.py  file.py  multidicomfile.py  numpyfile.py
mosamaticinsights/src/mosamaticinsights/core/exceptions/: taskexception.py  taskinvalidconfigexception.py
mosamaticinsights/src/mosamaticinsights/core/pipelines/: pipeline.py
mosamaticinsights/src/mosamaticinsights/core/tasks/: task.py
mosamaticinsights/src/mosamaticinsights/core/utilities/: __init__.py  doc.py  logmanager.py  logmanagerlistener.py
mosamaticinsights/src/mosamaticinsights/process/: dicomanalyzerprocess.py
mosamaticinsights/src/mosamaticinsights/render/: rendercanvas.py
mosamaticinsights/src/mosamaticinsights/ui/: backgroundprocess.py  mainwindow.py  mainwindow2.py  settings.py
mosamaticinsights/src/mosamaticinsights/ui/pages/: page.py
mosamaticinsights/src/mosamaticinsights/ui/process/: dummyprocess.py  process.py  processrunner.py  rescaledicomimagesprocess.py
mosamaticinsights/src/mosamaticinsights/ui/processes/: dicomanalyzerprocess.py  dummyprocess.py  dummywithparamsprocess.py  process.py  processrunner.py  rescaledicomimagesprocess.py
mosamaticinsights/src/mosamaticinsights/ui/resources/: mosamaticinsights.qrc  mosamaticinsights_rc.py
mosamaticinsights/src/mosamaticinsights/ui/widgets/: centraldockwidget.py  colorpicker.py  interactionwidgetdialog.py  logdockwidget.py  matplotlibcanvas.py  musclefatsegmentationuncertaintyviewer.py  (+1 more)
mosamaticinsights/tests/: run_tests.py  test_rescaledicomimagestask.py  test_segmentmusclefatl3tensorflowtask.py
(+9 files in other folders)
