[project]
name = "mosamaticinsights"
version = "0.1.0"
description = ""
authors = [
    {name = "Brecheisen", email = "r.brecheisen@maastrichtuniversity.nl"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "rbeesoft>=2.0.0",
    "torch==2.5.1",
    "torchvision>=0.20.1",
    "torchsummary",
    "tensorflow==2.15.*; platform_system == 'Linux'",
    "tensorflow-intel==2.15.0; platform_system == 'Windows'",
    "tensorflow-macos==2.15.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "tensorboard==2.15.2",
    "tensorboard-data-server==0.7.2",
    "tensorflow-io-gcs-filesystem==0.31.0; platform_system == 'Windows'",
    "tensorflow-io-gcs-filesystem>=0.31.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "totalsegmentator>=2.11.0",
]

[tool.poetry]
packages = [
    {include = "mosamaticinsights", from = "src"},
    {include = "models.py", from = "src" },
]

#[[tool.poetry.source]]
#name = "pytorch-cu121"
#url = "https://download.pytorch.org/whl/cu121"
#priority = "supplemental"

[tool.poetry.scripts]
mosamaticinsights = "mosamaticinsights.main:main"
mosamaticinsights-cli = "mosamaticinsights.main:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pyinstaller = "^6.17.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
